SFUSA/force-app/main/default/objects/Application_Response__c/fields/Account_Application__c.field-meta.xml
<CustomField>
        <fullName>Account_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Application</label>
        <referenceTo>Account_Application__c</referenceTo>
        <relationshipLabel>Application Responses</relationshipLabel>
        <relationshipName>Application_Responses</relationshipName>
        <type>Lookup</type>
    </CustomField>