SFUSA/force-app/main/default/objects/Application_Response__c/fields/Application_Status__c.field-meta.xml
<CustomField>
        <fullName>Application_Status__c</fullName>
        <formula>TEXT(Account_Application__r.Status__c)</formula>
        <label>Application Status</label>
        <type>Text</type>
    </CustomField>